# twitter-gpt

./: .gitignore  Dockerfile  README.md  pyproject.toml
.aws/: task-definition.json
.github/workflows/: aws-push.yml
tweet_gpt_analytics/: app.py  lambda_function.py
